fix table overflows

--- a/frontend/src/app/components/admin/manage-users/manage-users.component.css
+++ b/frontend/src/app/components/admin/manage-users/manage-users.component.css
@@ -116,3 +116,9 @@ tr:hover {
   background-color: #e6e47e !important;
   color: black;
 }
+
+
+.smaller-container{
+  overflow-y: auto;
+  height: 60px;
+}
